k8s-traefik-lb-demo/k8s/07-be-deployment.yaml
# Run the hospital backend API from the ECR image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment-v1
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: be-v1
  template:
    metadata:
      labels:
        app: be-v1
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1654
        fsGroup: 2000
      containers:
        - name: be-v1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          image: 606030503959.dkr.ecr.us-east-1.amazonaws.com/ecr-be:ace91b554eca2e53d95d6148f8363e9f73f2a6c2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
