k8s-traefik-lb-demo/k8s/04-traefik-service.yaml
# Mo Traefik ra NodePort de HAProxy/ALB co the forward traffic vao cluster.
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
