k8s-traefik-lb-demo/k8s/06-fe-service.yaml
# Tao ClusterIP Service noi bo de Gateway route traffic den frontend pods.
apiVersion: v1
kind: Service
metadata:
  name: fe-service-v1
  namespace: default
spec:
  selector:
    app: fe-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
